--- a/syllabus.tex
+++ b/syllabus.tex
@@ -44,105 +44,147 @@ This course provides an introduction to linear algebra. Topics include systems o
 The textbook is {\em Linear Algebra with Applications} by Holt, second edition.  An older first edition would also be fine, although some of the homework problem numbers have changed.
 
 \section*{\fontsize{12}{15}\selectfont Learning Outcomes}
-At the completion of this course, students will
+At the completion of this course, each student should be able to...
 \begin{enumerate}[1)]
-\item Be able to solve systems of linear equations.
-\item Be able to determine whether or not a set with given operations is a vector space or a subspace of another vector space.
-\item Be able to determine properties of sets of vectors such as whether they are linearly independent, whether they span, and whether they are a basis.
-\item Be able to perform fundamental operations in the algebra of matrices, including multiplying and inverting matrices.
-\item Be able to use and apply algebraic properties of a linear tranformation.
-\item Be able to determine geometric information about a linear transformation, including computing determinants, eigenvalues, and eigenvectors.
+\item Solve systems of linear equations.
+\item Determine whether or not a set with given operations is a vector space or a subspace of another vector space.
+\item Determine properties of sets of vectors such as whether they are linearly independent, whether they span, and whether they are a basis.
+\item Perform fundamental operations in the algebra of matrices, including multiplying and inverting matrices.
+\item Use and apply algebraic properties of a linear tranformation.
+\item Determine geometric information about a linear transformation, including computing determinants, eigenvalues, and eigenvectors.
 \end{enumerate}
 
 \section*{\fontsize{12}{15}\selectfont Topics}
-We will cover the first seven chapters of the book, although in a more intelligent order, along with some selected topics as time permits.
+We will cover the topics outlined on the \textbf{Course Standards}
+sheet provided to you, in the order that they appear on that sheet.
+These topics are taken from the first seven chapters of the textbook,
+but are arranged in a more efficient order.
 
 
 \section*{\fontsize{12}{15}\selectfont Attendance Policy}
-Attendance is required for this course, and will be tracked each day with a sign-in sheet.  The attendence threshhold is set at 80\% to account for a small number of short term absences for any reason.  Should you have excused absences for more than 5 days, come talk to me so we can make arrangements.
+Attendance is required for this course, and will be tracked each day.
+``Perfect'' attendence is considered anything greater than 80\%
+to account for a small number of short term absences for any reason.
+You are responsible for maintaining records of any excused absences,
+but you should only present these records to me if your attendence drops
+below 80\%.
 
 \ifbool{TBL}{
-\section*{\fontsize{12}{15}\selectfont Team-Based Learning}
+    \section*{\fontsize{12}{15}\selectfont Team-Based Learning}
 
-This class is taught by a method called {\bf team-based learning}.  Based on your responses to a survey on the first day of class, you will be assigned to a team that you will work with on various activities in class each day.  The course is divided into {\bf 6 modules}.
-\begin{itemize}
-\item Before each module begins, {\bf you will be responsible for ensuring your own readiness for the module}.  A list of learning outcomes for the readiness assurance process is available in Sakai; you should be able to do each of these things before coming to class on the first day of the module.  Due to the cumulative nature of mathematics, some of these readiness assurance outcomes are topics from previous classes, and some are topics from earlier in this class.
-\item The first day of each module will be dedicated to the {\bf Readiness Assurance Process}.  The schedule for the readiness assurance days is
+    This class is taught by a method called {\bf team-based learning}.  You will be assigned to a team that you will work with on various activities in class each day.  The course is divided into {\bf 6 modules}.
+    \begin{itemize}
+    \item Before each module begins, {\bf you will be responsible for ensuring your own readiness for the module}.  A list of learning outcomes for the readiness assurance process is available in Sakai; you should be able to do each of these things before coming to class on the first day of the module.  Due to the cumulative nature of mathematics, some of these readiness assurance outcomes are topics from previous classes, and some are topics from earlier in this class.
+    \item The first day of each module will be dedicated to the {\bf Readiness Assurance Process}.  The schedule for the readiness assurance days is
 
-\begin{center}
-\begin{tabular}{l|l}
-Module & Date \\ \hline \hline
-Systems of Linear Equations & \ifbool{TR}{August 22}{August 21} \\ \hline
-Vector Spaces &  \ifbool{TR}{September 5}{September 6} \\ \hline
-Structure of Vector Spaces & \ifbool{TR}{September 19}{September 20}\\ \hline
-Algebraic Properties of Linear Maps & \ifbool{TR}{October 17}{October 16} \\ \hline
-Matrix Algebra & \ifbool{TR}{October 31}{October 30} \\ \hline
-Geometric Properties of Linear Maps & \ifbool{TR}{November 14}{November 13} \\ \hline
-\end{tabular}
-\end{center}
+    \begin{center}
+    \begin{tabular}{l|l}
+    Module & Date \\ \hline \hline
+    Systems of Linear Equations & \ifbool{TR}{August 22}{August 21} \\ \hline
+    Vector Spaces &  \ifbool{TR}{September 5}{September 6} \\ \hline
+    Structure of Vector Spaces & \ifbool{TR}{September 19}{September 20}\\ \hline
+    Algebraic Properties of Linear Maps & \ifbool{TR}{October 17}{October 16} \\ \hline
+    Matrix Algebra & \ifbool{TR}{October 31}{October 30} \\ \hline
+    Geometric Properties of Linear Maps & \ifbool{TR}{November 14}{November 13} \\ \hline
+    \end{tabular}
+    \end{center}
 
 
-On these days, you will first take an {\bf Individual Readiness Assurance Test (iRAT)}.  After submitting this, working with your teammates you will retake the same test as the {\bf Team Readiness Assurance Test (tRAT)}.  These are not ``tests'' in the traditional sense, but rather 10 questions designed to measure if you are prepared for the team activities on subsequent days.
+    On these days, you will first take an {\bf Individual Readiness Assurance Test (iRAT)}.  After submitting this, working with your teammates you will retake the same test as the {\bf Team Readiness Assurance Test (tRAT)}.  These are not ``tests'' in the traditional sense; they are designed to measure if you are prepared for the team activities on subsequent days, and factor in towards your class participation score.
 
-\item On the other class days, you will work with your teammates on a series of activities designed to guide you through discovering the course material.
+    \item On the other class days, you will work with your teammates on a series of activities designed to guide you through discovering the course material.
 
-\item Part of your grade will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers and providing them feedback.  You will receive the anonymous feedback from your teammates, as well as a score that is the average of your teammates' evaluation of you.
+    \item Part of your class participation score will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers and providing them feedback.  You will receive the anonymous feedback from your teammates, as well as a score that is the average of your teammates' evaluation of you.
 
-Additionally, I will give you a multiplier score based on the quality of your feedback to your peers.  This number will be 100\% for any student that makes a good faith effort to fairly evaluate their peers.  This multiplier will be multiplied by your evaluation score as determined by your teammates.
+    Additionally, I will give you a multiplier score based on the quality of your feedback to your peers.  This number will be 100\% for any student that makes a good faith effort to fairly evaluate their peers.  This multiplier will be multiplied by your evaluation score as determined by your teammates.
 
-The questions for the peer evaluation will be determined by the class on the first day.
+    The questions for the peer evaluation will be determined by the class on the first day.
 
-\item Your {\bf Class Participation Score} will be determined by a weighted average of the following four items.  The weights will be determined by the class on the first day
+    \item Your {\bf Class Participation Score} will be determined by a weighted average of the following four items.  The weights will be determined by the class on the first day
 
-\begin{center}
-\begin{tabular}{l|l}
-Component & Weight \\ \hline \hline
-iRAT & TBD \\ \hline
-tRAT & TBD\\ \hline
-Peer Evaluation & TBD \\ \hline
-Attendence & TBD\\ \hline
+    \begin{center}
+    \begin{tabular}{l|l}
+    Component & Weight \\ \hline \hline
+    iRAT & TBD \\ \hline
+    tRAT & TBD\\ \hline
+    Peer Evaluation & TBD \\ \hline
+    Attendence & TBD\\ \hline
 
-\end{tabular}
-\end{center}
+    \end{tabular}
+    \end{center}
 
-This score will help determine your final grade, as detailed below.
-\end{itemize}
+    This score will help determine your final grade, as detailed below.
+    \end{itemize}
 }
 
 \section*{\fontsize{12}{15}\selectfont Standards Based Grading}
 This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 23 standards is available in Sakai.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
 
 
-\subsection*{\fontsize{10}{12}\selectfont Feedback}
+\ifbool{TR}{
+    \subsection*{\fontsize{10}{12}\selectfont Feedback}
+    On a written assessment, you will not receive a score or a percentage.  There will be a list of the standards that were covered on that assessment, and a number or symbol next to each one.
+    \begin{itemize}
+    \item A \masteryMark{} means you successfully demonstrated {\bf Mastery} of that standard.  Great job!  Check off another box on your progress sheet.
+    \item A \minorMark{} means you have a minor mistake, unrelated to the standard being assessed.  For example, if you make a single arithmetic error while row reducing a matrix but do everything else correctly, you will earn a *.  If you receive a *, I won't give you any other feedback on that problem.  If you can determine your mistake on your own, and come explain it to me in my office hours and finish the problem correctly, then I will modify the * into a M.  {\bf This must be done in the week following the assessment}.  After a week, the * will be treated the same as an R.
+    \item A \reattemptMark{} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  You should work some more practice problems, and come by my office hours if you still do not understand.  You can either wait for the next quiz, or reassess during my office hours (see ``Reassessments'' below).
+    \item A \noMark{} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.
+    \end{itemize}
+    Unfortunately, this grading system is far too sophisticated for Sakai's gradebook to handle.  So you will periodically receive an automatic email from me detailing your current progress in the course.  If you have any questions about how to interpret where you stand, come to my office hours to discuss.
 
-On a written assessment, you will not receive a score or a percentage.  There will be a list of the standards that were covered on that assessment, and a number or symbol next to each one.
-\begin{itemize}
-\item A {\bf M} means you successfully demonstrated {\bf Mastery} of that standard.  Great job!  Check off another box on your progress sheet.
-\item A {\bf *} means you have a minor mistake, unrelated to the standard being assessed.  For example, if you make a single arithmetic error while row reducing a matrix but do everything else correctly, you will earn a *.  If you receive a *, I won't give you any other feedback on that problem.  If you can determine your mistake on your own, and come explain it to me in my office hours and finish the problem correctly, then I will modify the * into a M.  {\bf This must be done in the week following the assessment}.  After a week, the * will be treated the same as an R.
-\item A {\bf R} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  You should work some more practice problems, and come by my office hours if you still do not understand.  You can either wait for the next quiz, or reassess during my office hours (see ``Reassessments'' below).
-\item A {\bf N} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.
-\end{itemize}
 
-Unfortunately, this grading system is far too sophisticated for Sakai's gradebook to handle.  So you will periodically receive an automatic email from me detailing your current progress in the course.  If you have any questions about how to interpret where you stand, come to my office hours to discuss.
+    \subsection*{\fontsize{10}{12}\selectfont Reassessment}
+    You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.
+    \begin{enumerate}[1)]
+    \item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in Sakai.}
+    \item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.  The midterm will be an opportunity to demonstrate mastery on any standard from the first three modules, while the semifinal and final exam will have every standard available.
+    \item Additionally, if you receive an R on a standard, you can come to my office to reassess the standard.  There are a few caveats to office hour reassessments:
+    \begin{itemize}
+    \item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in Sakai).
+    \item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. }
+    \item \textbf{You can only reassess one standard per day} (or perhaps two closely related standards that can be assessed by a single problem).
+    \item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
+    \item If you come in for help on a standard, you should come back at a later time to reassess it after you have practiced it some more on your own.  But you may certainly ask for help on one standard, and then demonstrate mastery of a different one during the same visit.
+    \item \textbf{Reassessment opportunities may be limited by practical considerations like time limitations and fairness to your classmates, particularly towards the end of the semester.}  I do my best to accommodate everyone, but this is especially difficult at the end of the semester.  {\bf Students from previous semesters say the best thing you can do is to start reassessing early in the semester}.
+    \ifbool{TR}{\item I will try to schedule extra office hours during finals week, but the last day for office hour reassessments will be Tuesday, December 5.  As with the midterm, I want to be sure my office hours the day before the final are available to answer any questions or clear up any last difficulties.}{}
+    \item You can certainly demonstrate mastery of a standard for a second time in my office hours; however, to qualify it must occur in a subsequent week after you first mastered the standard.
+    \end{itemize}
+    \end{enumerate}
+}{
+    \subsection*{\fontsize{10}{12}\selectfont Feedback}
+    Each time an attempt to demonstrate mastery is submitted, the attempt will be marked as follows.
+    \begin{itemize}
+    \item \masteryMark{} means you successfully demonstrated mastery of that standard, so check off another box on your progress report!
+    \item \minorMark{} means you made a minor mistake, unrelated to the standard being assessed; for example, if made a single arithmetic error while row reducing a matrix but did everything else correctly. If you rework the problem completely correctly \textbf{within one week}, this mark will be changed to \masteryMark{}, but after one week this mark will be counted as \reattemptMark{} instead.
+    \item \reattemptMark{} means you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment. You are eligible to reattempt demonstrating mastery of this standard outside of class; see ``Reattempts'' below.
+    \item \noMark{} means there was {\bf No Significant Evidence} of understanding.
+    \end{itemize}
+    Due to limitations in Sakai's gradebook, grades will only be available via occassional progress reports. You may request a new progress report during office hours as well.
 
 
-\subsection*{\fontsize{10}{12}\selectfont Reassessment}
-You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.
-\begin{enumerate}[1)]
-\item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in Sakai.}
-\item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.  The midterm will be an opportunity to demonstrate mastery on any standard from the first three modules, while the semifinal and final exam will have every standard available.
-\item Additionally, if you receive an R on a standard, you can come to my office to reassess the standard.  There are a few caveats to office hour reassessments:
-\begin{itemize}
-\item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in Sakai).
-\item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. }
-\item \textbf{You can only reassess one standard per day} (or perhaps two closely related standards that can be assessed by a single problem).
-\item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
-\item If you come in for help on a standard, you should come back at a later time to reassess it after you have practiced it some more on your own.  But you may certainly ask for help on one standard, and then demonstrate mastery of a different one during the same visit.
-\item \textbf{Reassessment opportunities may be limited by practical considerations like time limitations and fairness to your classmates, particularly towards the end of the semester.}  I do my best to accommodate everyone, but this is especially difficult at the end of the semester.  {\bf Students from previous semesters say the best thing you can do is to start reassessing early in the semester}.
-\ifbool{TR}{\item I will try to schedule extra office hours during finals week, but the last day for office hour reassessments will be Tuesday, December 5.  As with the midterm, I want to be sure my office hours the day before the final are available to answer any questions or clear up any last difficulties.}{}
-\item You can certainly demonstrate mastery of a standard for a second time in my office hours; however, to qualify it must occur in a subsequent week after you first mastered the standard.
-\end{itemize}
-\end{enumerate}
+    \subsection*{\fontsize{10}{12}\selectfont Out-of-class Reattempts}
+    Most \masteryMark{}s should be earned during in-class quizzes or exams;
+    you only need to earn two for each standard, and most standards will be
+    assessed on four quizzes, the midterm (if covered before midterm), and
+    on the final.
+
+    During office hours most Wednesdays, you will be given the opportunity to
+    improve up to two \reattemptMark{} to \masteryMark{} from different
+    standards that you have not earned a \masteryMark{} within the past week.
+    You must bring a completed \textbf{Reattempt form} with several homework
+    exercise solutions. After discussion of these solutions, if it appears you
+    have likely mastered the standard,
+    you will be given an additional exercise to take home and complete.
+    Once submitted, this exercise will be marked with \masteryMark{},
+    \minorMark{}, or \noMark{}.
+
+    This policy may be alatered due to availability and scheduling
+    concerns. In particular, this policy may be altered during the week
+    of the midterm or the final week of class, or in the case of heavy
+    demand. You are encouraged to earn \masteryMark{}s during quizzes and
+    exams whenever possible, and to take advantage of this policy
+    as early in the semster as possible.
+}
 
 
 
@@ -152,21 +194,20 @@ There will be \ifbool{TBL}{four}{three} kinds of in class assessments:
 \begin{itemize}
 \ifbool{TBL}{\item As detailed above, there will be 6 iRATs and 6 tRATs; the dates for these are given above and listed in the assessment schedule in Sakai.}{}
 \item As mentioned above, {\bf each day we will have a quiz} in the last 15 minutes of class giving you opportunity to master several standards.  Note that you must have participated in class that day to be eligible to take the quiz.  A schedule listing which standards will appear on which quizzes is available in Sakai.
-\item There will be a {\bf midterm exam on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}}.
-\item {\bf The final exam will be \ifbool{TR}{Thursday, December 7 at \ifbool{TBL}{10:30}{1:00}}{\ifbool{TBL}{Monday, December 4 at 6:00}{Wednesday, December 6 at 3:30}}}.
+\item There will be a {\bf midterm exam on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}} and a {\bf final exam on \ifbool{TR}{Thursday, December 7 at \ifbool{TBL}{10:30}{1:00}}{\ifbool{TBL}{Monday, December 4 at 6:00}{Wednesday, December 6 at 3:30}}}.
 \end{itemize}
 
 
 \begin{samepage}
 \section*{\fontsize{12}{15}\selectfont Grading}
-At the end of the semester, your grade will be computed in the following manner.  Note that for each grade you must meet every criteria listed. \\
+At the end of the semester, your grade will be computed in the following manner.  \\
 
 \begin{tabular}{l|l}
-To earn a letter grade of ... & ... you should at least \\
+To earn a letter grade of ... & ... you should at least do ALL of the following.\\
 \hline \\
 A & \begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 40 mastery checkmarks;
+\item Earn 40 mastery checkmarks;
 \item Complete 10 homework reports;
 \item \ifbool{TBL}{Have a 90\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
@@ -175,7 +216,7 @@ A & \begin{minipage}{0.7\textwidth}
 
 B & \begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 35 mastery checkmarks;
+\item Earn 35 mastery checkmarks;
 \item Complete 8 homework reports;
 \item \ifbool{TBL}{Have a 80\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
@@ -184,7 +225,7 @@ B & \begin{minipage}{0.7\textwidth}
 
 C 	& \begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 30 mastery checkmarks;
+\item Earn 30 mastery checkmarks;
 \item Complete 6 homework reports;
 \item \ifbool{TBL}{Have a 70\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
@@ -193,7 +234,7 @@ C 	& \begin{minipage}{0.7\textwidth}
 
 D 	&\begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 20 mastery checkmarks;
+\item Earn 20 mastery checkmarks;
 \item Complete 4 homework reports;
 \item \ifbool{TBL}{Have a 50\% Class Participation Score}{Have a 50\% attendence record.} \\
 \end{itemize}
@@ -213,23 +254,25 @@ F 	& \begin{minipage}{0.7\textwidth}
 
 
 \section*{\fontsize{12}{15}\selectfont Homework}
-The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.}  Unlike most math classes, I will not ask you to hand these in for a grade.  I will instead ask you to turn in a homework report each week (blank ones are available in Sakai).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due every \ifbool{TR}{Thursday}{Wednesday} at the beginning of class.}  Late homework reports will not be accepted.
+The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.} You are not asked to hand these in for a grade.  Instead, you are expected to turn in a homework report each week (blank ones are available in Sakai).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due every \ifbool{TR}{Thursday}{Wednesday} at the beginning of class.}  Late homework reports will not be accepted.
 
 
 
 \section*{\fontsize{12}{15}\selectfont Missed Exams and Coursework}
 
-The midterm and final exams can only be made up in the event of illness (with a doctor's note), or other emergent situation (with appropriate documentation).  The definition of ``emergent'' is at the discretion of the instructor. Quizzes can be made up in extreme cases similar to exams, but it is often simpler to just reassess on a subsequent quiz or in my office hours.  Readiness Assurance Tests will not be made up; an appropriately documented emergent situation will be handled by simply omitting an iRAT from the average, and still using the tRAT score.  An unexcused absence will result in a 0 for both the iRAT and tRAT scores.
+The midterm and final exams can only be made up in the event of illness (with a doctor's note), or other emergent situation (with appropriate documentation).  The definition of ``emergent'' is at the discretion of the instructor. Quizzes can only be made up if several in a row are missed due to an acceptable excuse as defined above.
+
+\ifbool{TBL}{Readiness Assurance Tests will not be made up. An unexcused absence will result in a 0 for both the iRAT and tRAT scores; otherwise the missed iRAT will be dropped and your team's tRAT will be counted for you.}{}
 
 
 
 \section*{\fontsize{12}{15}\selectfont Calculator Policy}
 
-Calculators of any sort may be used on exams; a calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but if you have previously demonstrated mastery of a standard (e.g. row reduction) you may do that part on a calculator.
+Calculators of any sort may be used on exams provided that the calculator cannot make phone calls, send text messages, or access the internet. A calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but you may use a calculator to skip any details that have been assessed on another standard. For example, you can use a calculator to row-reduce a matrix, unless the standard being assessed is row reduction itself.
 
 \section*{\fontsize{12}{15}\selectfont Student Academic Conduct Policy}
 All students are expected to adhere to the Student Academic Conduct Policy, which you can view at
-{\tt http://www.southalabama.edu/bulletin/current/student-affairs/conduct.html}.  Students violating this policy will be penalized based on the severity of the offense in one of the following manners  1) Losing any mastery checkmarks on particular standards affected by the misconduct; 2) Reduction in final course grade by a letter grade; 3) Automatic course failure.
+{\tt http://www.southalabama.edu/bulletin/current/student-affairs/conduct.html}.  Students violating this policy will be given one or more of the following penalties based on the severity of the offense:  1) Loss of all mastery checkmarks on all standards affected by the misconduct; 2) Reduction in final course grade by a letter grade; 3) Automatic course failure.
 
 
 
