--- a/day1_slides.tex
+++ b/day1_slides.tex
@@ -47,98 +47,120 @@ By the end of this class, you will be able to
 \pause \item Determine whether or not a set with given operations is a vector space or a subspace of another vector space.
 \pause \item Determine properties of sets of vectors such as whether they are linearly independent, whether they span, and whether they are a basis.
 \pause \item Perform fundamental operations in the algebra of matrices, including multiplying and inverting matrices.
-\pause \item Use and apply algebraic properties of a linear tranformation.
+\pause \item Use and apply algebraic properties of a linear transformation.
 \pause \item Determine geometric information about a linear transformation, including computing determinants, eigenvalues, and eigenvectors.
 \end{itemize}
 \end{frame}
 
-\section{SBG}
+\section{Standards Based Grading (SBG)}
 \begin{frame}\frametitle{Standards Based Grading}
-You have two jobs in this class
-\begin{enumerate}
-\item Master the material
-\item Demonstrate to me that you have mastered the material
-\end{enumerate}
+Your main job in this course is to \textbf{master the covered material}
+and \textbf{demonstrate that mastery to me}.
 
 \vspace{0.2in}
+\pause
 
-{\bf I do not care when* or how you demonstrate mastery, only that you demonstrate mastery.}
+You will be given several opportunities to demonstrate mastery throughout
+the semester, and if
+at first you don't succeed, you can try again without any penalty.
 \end{frame}
 
 \begin{frame}\frametitle{SBG}
-The course material is broken down into 23 learning {\bf standards}
+The course material is broken down into 23 learning \textbf{standards}.
 \begin{itemize}
-\item On an assessment (e.g. quiz), you will not receive a numerical score; instead for each standard I will mark whether you've mastered it or not.
-\item Standards will be assessed several times.  If you don't succeed the first time, practice more and try again!  
-\item It doesn't matter how many attempts it takes, only that you eventually demonstrate mastery.
-\item You can demonstrate mastery of each standard up to two times, making for 46 possible mastery checkmarks.  Your grade will be determined by how many checkmarks you earn.
+\item Each attempted exercise will be simply marked according to whether or not
+      your solution demonstrates mastery of the relevant standards.
+\item Each solution that demonstrates complete mastery counts as a
+      \textbf{checkmark} for that standard.
+\item Up to two checkmarks may be earned for each standard. Your grade depends
+      on the total number of checkmarks you earn this semester (up to 46).
+\item Standards will be assessed several times, and there's no penalty for
+      incorrect solutions. So, if you don't succeed the first time,
+      keep studying and try again!
 \end{itemize}
 \end{frame}
 
-\begin{frame}\frametitle{Assessments}
-There will be several different types of assessments
+\begin{frame}\frametitle{Assessment Opportunities}
+Checkmarks may be earned as follows.
 \begin{itemize}
-\item {\bf Quizzes}: Each day at the end of class we will have a quiz.
-\item {\bf Midterm}: There will be a single midterm exam the week of Fall Break.
-\item {\bf Final Exam}: This will be your final opportunity to demonstrate mastery
-\item {\bf Office Hours Reassessments}: See form in Sakai
+\item {\bf Quizzes}: Each day at the end of class we will have a quiz. This
+      is how you should earn most of your checkmarks.
+\item {\bf Midterm}: There will be a single midterm exam the week of Fall Break
+      to give you the chance to catch up on missed standards.
+\item {\bf Final Exam}: Your final opportunity to demonstrate mastery,
+      cumulative over the entire course.
+\item {\bf Out-of-class Reattempts}: A limited number of oppotunities
+      will be provided to earn checkmarks outside of class.
 \end{itemize}
+
+\pause
 
 \vspace{0.2in}
 
-I do not care which assessment you demonstrate mastery on, only that you demonstrate mastery of a standard.
+The assessment method (quiz/exam/etc.) you used to earn a checkmark
+isn't important: I only care that you
+learn the material and demonstrate that mastery to me before the end of the
+semester!
 \end{frame}
 
 \begin{frame}\frametitle{Interpreting Feedback}
-On each assessment, for each standard you will receive one of the following marks
+On each assessment, for each standard you will receive one of the following marks.
 \begin{itemize}
-\item {\bf M} means you demonstrated {\bf Mastery} of that standard.  Great job!  Check off another box on your progress sheet.
-\item {\bf *} means you have a minor mistake. If you can determine your mistake on your own, and come explain it to me in my office hours in the next week, then I will modify the * into a M. 
-\item {\bf R} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  
-\item {\bf N} means there was {\bf No Significant Evidence} of understanding. Your next attempt must come on an in-class assessment.  
+\item \masteryMark{} means you demonstrated \textbf{Mastery} of that standard.
+      Great job!  Check off another box on your progress sheet.
+\item \minorMark{} means you have a minor mistake, but if you can correct it,
+      this mark will be changed to \masteryMark{}.
+\item \reattemptMark{} means you made a good faith effort and demonstrated
+      partial understanding, but not complete mastery. You are eligible to
+      \textbf{Reattempt} the standard outside of class.
+\item \noMark{} means there was \textbf{No Significant Evidence} of understanding.
 \end{itemize}
+
+\pause
+
+\vspace{0.2in}
+
+Marks other than \masteryMark{} do not improve your course letter grade, but
+they don't hurt you either.
 \end{frame}
 
 \begin{frame}\frametitle{Course Grades}
 
-\begin{tabular}{l|l}
-\hline \\
+\begin{tabular}{ll}
 A & \begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 40 mastery checkmarks;
-\item Complete 10 homework reports;
-\item \ifbool{TBL}{Have a 90\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
-\end{minipage} \\
-\hline \\
+\item Earn 40 mastery checkmarks.
+\item Complete 10 homework reports.
+\item \ifbool{TBL}{Have a 90\% Class Participation Score.}{Have an 80\% attendence record.} \\
+\end{itemize}
+\vspace{0.1em}\end{minipage}
+\\\hline
+B & \begin{minipage}{0.7\textwidth}~\vspace{0.1em}
 
-B & \begin{minipage}{0.7\textwidth}
-\begin{itemize}	
-\item Obtain 35 mastery checkmarks;
-\item Complete 8 homework reports;
-\item \ifbool{TBL}{Have a 80\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
-\end{minipage} \\
-\hline \\
+\begin{itemize}
+\item Earn 35 mastery checkmarks.
+\item Complete 8 homework reports.
+\item \ifbool{TBL}{Have a 80\% Class Participation Score.}{Have an 80\% attendence record.} \\
+\end{itemize}
+\vspace{0.1em}\end{minipage}
+\\\hline
+C 	& \begin{minipage}{0.7\textwidth}~\vspace{0.1em}
 
-C 	& \begin{minipage}{0.7\textwidth}
-\begin{itemize}	
-\item Obtain 30 mastery checkmarks;
-\item Complete 6 homework reports;
-\item \ifbool{TBL}{Have a 70\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
-\end{minipage} \\
-\hline \\
+\begin{itemize}
+\item Earn 30 mastery checkmarks.
+\item Complete 6 homework reports.
+\item \ifbool{TBL}{Have a 70\% Class Participation Score.}{Have an 80\% attendence record.} \\
+\end{itemize}
+\vspace{0.1em}\end{minipage}
+\\\hline
+D 	&\begin{minipage}{0.7\textwidth}~\vspace{0.1em}
 
-D 	&\begin{minipage}{0.7\textwidth}
-\begin{itemize}	
-\item Obtain 20 mastery checkmarks;
-\item Complete 4 homework reports;
-\item \ifbool{TBL}{Have a 50\% Class Participation Score}{Have a 50\% attendence record.} \\
-\end{itemize} 
-\end{minipage} \\
-\hline 
-
+\begin{itemize}
+\item Earn 20 mastery checkmarks.
+\item Complete 4 homework reports.
+\item \ifbool{TBL}{Have a 50\% Class Participation Score.}{Have a 50\% attendence record.} \\
+\end{itemize}
+\end{minipage}
 \end{tabular}
 
 \end{frame}
@@ -146,47 +168,89 @@ D 	&\begin{minipage}{0.7\textwidth}
 \begin{frame}\frametitle{Homework}
 Homework is practice.
 \begin{itemize}
-\item I will not collect or grade homework problems.  
+\item I will not collect or grade homework problems.
 \item A list of suggested exercise for practice is in Sakai, sorted by standard.  You should work as many or as few of these as you need to master the material.
-\item {\bf Caveat discipulus}: Most students do not work as many homework exercises as they should.
+\item \ifbool{TR}{\textbf{Caveat discipulus}:}{\textbf{Heads up!}} Most students do not work as many homework exercises as they should.
 \item If you need help or feedback, come to my office hours.
 \item I will collect homework reports each week (blank form in Sakai).
 \end{itemize}
 \end{frame}
 
-\section{TBL}
+\ifbool{TBL}{
+  \section{Team-Based Learning (TBL)}
 
-\begin{frame}\frametitle{Team-Based Learning}
-In this class we will use {\bf Team-Based Learning}.
-\begin{itemize}
-\item The course is divided into six modules, each lasting about 2 weeks.
-\item At the beginning of each module is the {\bf Readiness Assurance Process}.  The first day of the module will consist of individual and team Readiness Assurance Tests
-\item The next 3-4 class days will consist of guided activities with you working in your team.
-\item Research in other STEM disciplines show that TBL leads to improved student learning.
-\end{itemize}
-\end{frame}
+  \begin{frame}\frametitle{Team-Based Learning}
+  In this class we will use {\bf Team-Based Learning}.
+  \begin{itemize}
+  \item The course is divided into six modules, each lasting about 2 weeks.
+  \item At the beginning of each module is the {\bf Readiness Assurance Process}.  The first day of the module will consist of individual and team Readiness Assurance Tests
+  \item The next 3-4 class days will consist of guided activities with you working in your team.
+  \item Research in other STEM disciplines show that TBL leads to improved student learning.
+  \end{itemize}
+  \end{frame}
 
-\begin{frame}\frametitle{Readiness Assurance Process}
-\begin{itemize}
-\item In Sakai, you will find a list of the skills you should have {\bf before each module starts}, along with a list of resources to help you prepare.
-\begin{itemize}
-\item Sometimes these skills are from previous courses.
-\item Sometimes these skills are standards from earlier in this course.
-\end{itemize}
-\pause \item On the first day of the module, the Readiness Assurance Tests will ensure you have these skills.
-\begin{itemize}
-\item First, you will individually take the RAT
-\item After everyone is done, you will take the RAT again collaboratively as a team.
-\end{itemize}
-\item {\bf The first Readiness Assurance day is \ifbool{TR}{Tuesday}{Monday}!}
-\end{itemize}
-\end{frame}
+  \begin{frame}\frametitle{Readiness Assurance Process}
+  \begin{itemize}
+  \item In Sakai, you will find a list of the skills you should have {\bf before each module starts}, along with a list of resources to help you prepare.
+  \begin{itemize}
+  \item Sometimes these skills are from previous courses.
+  \item Sometimes these skills are standards from earlier in this course.
+  \end{itemize}
+  \pause \item On the first day of the module, the Readiness Assurance Tests will ensure you have these skills.
+  \begin{itemize}
+  \item First, you will individually take the RAT
+  \item After everyone is done, you will take the RAT again collaboratively as a team.
+  \end{itemize}
+  \item {\bf The first Readiness Assurance day is \ifbool{TR}{Tuesday}{Monday}!}
+  \end{itemize}
+  \end{frame}
 
-\begin{frame}\frametitle{Teams}
-Stand up.  Line up in alphabetical order by last name, with A at the front of the room.
-\vspace{4in}
-\end{frame}
+  \begin{frame}\frametitle{Teams}
+  Stand up.  Line up in alphabetical order by last name, with A at the front of the room.
+  \vspace{4in}
+  \end{frame}
 
+  \begin{frame} \frametitle{What makes a good team member?}
+  Create a list of criteria that make an effective team member.
+  \vspace{4in}
+  \end{frame}
+
+  \begin{frame} \frametitle{Peer Evaluation Questions}
+  Create a list of questions your team thinks should be on the peer evaluation surveys.  Answers to the questions should be on a scale from 1 to 5.
+  \vspace{4in}
+  \end{frame}
+
+  \begin{frame} \frametitle{Class Participation Score}
+  There will be four components to your participation score
+
+  \begin{center}
+  \begin{tabular}{l|l}
+  \hline
+  iRAT (individual) & \phantom{xxxx}\%   \\ \hline
+  tRAT (team) & \phantom{xxxx}\%   \\ \hline
+  Peer Evaluation & \phantom{xxxx}\%   \\ \hline
+  Attendence & \phantom{xxxx}\%   \\ \hline
+  \end{tabular}
+  \end{center}
+
+
+  In your teams, decide what percentage each of the four components should have.  They should add to 100\%.
+  \end{frame}
+}{
+  \section{Lectures}
+  \begin{frame} \frametitle{Class structure}
+  \begin{itemize}
+  \item The course is divided into six modules, each lasting about 2 weeks.
+  \item At the beginning of each module is one review day working through
+        examples from previous courses and standards.
+  \item The next 3-4 class days will consist of lectures covering several
+        exercises/activities that will help you master the course standards.
+  \end{itemize}
+  \end{frame}
+}
+
+
+\ifbool{TR}{
 \begin{frame}\frametitle{Office Hours}
 Choose up 3 one-hour long periods your team would like me to have an office hour during.  Rank them in order of your preference.\\
 \ \\
@@ -198,33 +262,7 @@ I have the following constraints:
 \item I have departmental meetings/seminars 3:30-5 on Thursdays
 \end{itemize}
 \end{frame}
-
-\begin{frame} \frametitle{What makes a good team member?}
-Create a list of criteria that make an effective team member.
-\vspace{4in}
-\end{frame}
-
-\begin{frame} \frametitle{Peer Evaluation Questions}
-Create a list of questions your team thinks should be on the peer evaluation surveys.  Answers to the questions should be on a scale from 1 to 5.
-\vspace{4in}
-\end{frame}
-
-\begin{frame} \frametitle{Class Participation Score}
-There will be four components to your participation score
-
-\begin{center}
-\begin{tabular}{l|l}
-\hline 
-iRAT & \phantom{xxxx}\%   \\ \hline
-tRAT & \phantom{xxxx}\%   \\ \hline
-Peer Evaluation & \phantom{xxxx}\%   \\ \hline
-Attendence & \phantom{xxxx}\%   \\ \hline
-\end{tabular}
-\end{center}
-
-
-In your teams, decide what percentage each of the four components should have.  They should add to 100\%.
-\end{frame}
+}{}
 
 
 
