Compile everything script

--- a/class-macros.tex
+++ b/class-macros.tex
@@ -8,7 +8,7 @@
 
 \newcommand{\course}{Math 237-%
   \ifbool{TR}{%
-    \ifbool{TBL}{???}{???}%
+    \ifbool{TBL}{102}{103}%
   }{%
     \ifbool{TBL}{501}{101}%
   }%
