--- a/syllabus.tex
+++ b/syllabus.tex
@@ -202,46 +202,51 @@ There will be \ifbool{TBL}{four}{three} kinds of in class assessments:
 \section*{\fontsize{12}{15}\selectfont Grading}
 At the end of the semester, your grade will be computed in the following manner.  \\
 
-\begin{tabular}{l|l}
-To earn a letter grade of ... & ... you should at least do ALL of the following.\\
-\hline \\
-A & \begin{minipage}{0.7\textwidth}
+\begin{tabular}{l|l|l}
+To earn a letter grade of ... & ... you should at least do ALL of the following... & OR do this.\\
+\hline 
+A & \begin{minipage}{0.4\textwidth}
+\vspace{0.05in}
 \begin{itemize}
 \item Earn 40 mastery checkmarks;
 \item Complete 10 homework reports;
 \item \ifbool{TBL}{Have a 90\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
-\end{minipage} \\
-\hline \\
+\end{minipage} & Earn 45 mastery checkmarks \\
+\hline 
 
-B & \begin{minipage}{0.7\textwidth}
+B & \begin{minipage}{0.4\textwidth}
+\vspace{0.05in}
 \begin{itemize}
 \item Earn 35 mastery checkmarks;
 \item Complete 8 homework reports;
 \item \ifbool{TBL}{Have a 80\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
-\end{minipage} \\
-\hline \\
+\end{minipage} & Earn 40 mastery checkmarks \\
+\hline
 
-C 	& \begin{minipage}{0.7\textwidth}
+C 	& \begin{minipage}{0.4\textwidth}
+\vspace{0.05in}
 \begin{itemize}
 \item Earn 30 mastery checkmarks;
 \item Complete 6 homework reports;
 \item \ifbool{TBL}{Have a 70\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize}
-\end{minipage} \\
-\hline \\
+\end{minipage} & Earn 35 mastery checkmarks\\
+\hline 
 
-D 	&\begin{minipage}{0.7\textwidth}
+D 	&\begin{minipage}{0.4\textwidth}
+\vspace{0.05in}
 \begin{itemize}
 \item Earn 20 mastery checkmarks;
 \item Complete 4 homework reports;
 \item \ifbool{TBL}{Have a 50\% Class Participation Score}{Have a 50\% attendence record.} \\
 \end{itemize}
-\end{minipage} \\
-\hline \\
+\end{minipage} & Earn 25 mastery checkmarks\\
+\hline 
 
-F 	& \begin{minipage}{0.7\textwidth}
+F 	& \begin{minipage}{0.4\textwidth}
+\vspace{0.05in}
 \begin{itemize}
 \item Not fit in the above categories. \\
 \end{itemize}
