Finished first day slides

--- a/day1_slides.tex
+++ b/day1_slides.tex
@@ -126,41 +126,34 @@ they don't hurt you either.
 
 \begin{frame}\frametitle{Course Grades}
 
-\begin{tabular}{ll}
-A & \begin{minipage}{0.7\textwidth}
+\begin{tabular}{llll}
+A & \begin{minipage}{0.6\textwidth}
 \begin{itemize}
 \item Earn 40 mastery checkmarks.
 \item Complete 10 homework reports.
 \item \ifbool{TBL}{Have a 90\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage}
+\vspace{0.1em}\end{minipage} & OR &  45  
 \\\hline
-B & \begin{minipage}{0.7\textwidth}~\vspace{0.1em}
+B & \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 
 \begin{itemize}
 \item Earn 35 mastery checkmarks.
 \item Complete 8 homework reports.
 \item \ifbool{TBL}{Have a 80\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage}
+\vspace{0.1em}\end{minipage} & OR & 40
 \\\hline
-C 	& \begin{minipage}{0.7\textwidth}~\vspace{0.1em}
+C 	& \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 
 \begin{itemize}
 \item Earn 30 mastery checkmarks.
 \item Complete 6 homework reports.
 \item \ifbool{TBL}{Have a 70\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage}
-\\\hline
-D 	&\begin{minipage}{0.7\textwidth}~\vspace{0.1em}
+\vspace{0.1em}\end{minipage} & OR & 35
+\\
 
-\begin{itemize}
-\item Earn 20 mastery checkmarks.
-\item Complete 4 homework reports.
-\item \ifbool{TBL}{Have a 50\% Class Participation Score.}{Have a 50\% attendence record.} \\
-\end{itemize}
-\end{minipage}
 \end{tabular}
 
 \end{frame}
@@ -206,7 +199,7 @@ Homework is practice.
   \end{frame}
 
   \begin{frame}\frametitle{Teams}
-  Stand up.  Line up in alphabetical order by last name, with A at the front of the room.
+  Stand up.  Line up in alphabetical order by last name, with A at the front left of the room.
   \vspace{4in}
   \end{frame}
 
