--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -175,7 +175,7 @@
 \newcommand{\masteryMark}{\ifbool{TR}{\textbf{M}}{\checkmark}}
 \newcommand{\minorMark}{\textbf{*}}
 \newcommand{\reattemptMark}{\ifbool{TR}{\textbf{R}}{\danger}}
-\newcommand{\noMark}{\ifbool{TR}{\textbf{B}}{\(\times\)}}
+\newcommand{\noMark}{\ifbool{TR}{\textbf{N}}{\(\times\)}}
 
 
 % Make sure to include one of the following lines after
